Made field courses mutable, but getCourses() returns unmodifiable list